--- a/index.html
+++ b/index.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Gamzat Resume</title>
     <meta name="keywords" content="html, course, css, tags, resume, cv, резюме">
     <meta name="description" content="Это мой первый сайт визитка от школы Result School">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <img src="my_photo.jpg" alt="Моё фото" width="200">   
+ <div class="container">
+
+<div class="bio">  
+<img src="my_photo.jpg" alt="Моё фото" class="photo"> 
+
+ <div class="info-text">
  <h1>Гамзат Юсупов</h1>
- <p>Меня зовут <strong>Гамзат Юсупов</strong>, <em>мне 24 года.</em></p>
- <p>Люблю творчество <strong><em>Есенина, Достоевского, Джека Лондона</em></strong>.</p>
- <p>Люблю <strong><em>саморазвитие и искусство</em></strong> в любом его проявлении</p>
+ 
+ <p>Люблю<strong><em> компьютерные технологии, компьютеры и саморазвиваться</em></strong> в разных направлениях.</p>
+ 
  <h2>Список социальных сетей</h2>
  <a href="https://vk.com/gamzzzdoto" target="_blank">Вконтакте</a>
  |   
  <a href="https://t.me/gamzzz97" target="_blank">Telegram</a>
  |
  <a href="https://www.youtube.com/channel/UCrHoe0U2o2QIrXOEm-hhuAQ" target="Youtube">Youtube</a>
+</div>
+
+</div> 
+ <div class="hobbies">
  <h2>Мои хобби</h2>
  <ol>
     <li>Компьютерные игры</li>
@@ -32,8 +42,10 @@
     <li>Долгие прогулки на свежем воздухе</li>
     <li>Программирование</li>
  </ol>
-    <h2>Опыт работы</h2>
-    <table>
+</div>
+ <div class="workexp">
+ <h2>Опыт работы</h2> 
+ <table border="1px">
      <tr>
         <thead>
         <th>Название</th>
@@ -54,30 +66,37 @@
     </tr>
     <tr>
         <td>Техник-Айс</td>
-        <td>Специалист АСЦ по приемке и выдачи бытовой технике</td>
+        <td>Специалист АСЦ по приемке и выдачи бытовой техники</td>
         <td>2021-2022</td>
     </tr>
-    </tbody>    
+    </tbody>     
     </table>
-    <h2>Связаться со мной</h2>
-    <form>
-    <div>
+</div>
+
+
+    
+    <form class="form">
+        <h2>Связаться со мной</h2>
+    
+        <div class="form-row">
+    <div class="form-group">
     <label for="text">Ваше Имя:</label>
      <input type="text" id="text" placeholder="Введите имя">   
     </label>
 </div>
-    <div>
+    <div class="form-group">
         <label for="email">Введите email:</label>
         <input type="email" id="email" placeholder="Введите email">
 </div>
-    <div>
+</div>
+    <div class="form-group">
         <label for="message">Ваше сообщение:</label>
-        <br>
         <textarea id="message" cols="20" rows="4" placeholder="Введите сообщение..."></textarea>
     </div>
     <div>
-        <button type="submit">Отправить!</button>
+        <button type="submit" class="btn">Отправить!</button>
     </div>
     </form>
+</div> 
 </body>
 </html>
